# python-matlab-examples

./: .flake8  .gitignore  .mypy.ini  .travis.yml  CartopyStereoGridLabels.py  Fourier transform Gaussian.ipynb  R2014bAxesMultiColormap.m  README.md  README.rst  airy_disc_kernel.m  bokeh_demo.py  bokehtest.py  colormap_white_min.m  colormap_white_min.py  contourImage2.m  contourOverImage.m  contourOverImage.py  cwd.m  f2py_demo.py  fortprod.f  h5py_demo.py  hdf5examples.py  html_matplotlib.py  loadingLog.m  mademo.py  masked_array_demo.py  matplotlib2matlab_colormap.py  matplotlib_3d.py  matplotlib_add_font.py  oct2py_class.m  oct2py_class.py  octave_fonts.m  overlaytest.py  pcolormesh_NaN.py  polar_axes_with_image.py  polar_plot_matplotlib.py  print_matplotlib_colors.py  pyproject.toml  requirements.txt  setup.cfg  (+10 more)
.github/workflows/: ci.yml
GUI/: widgets_menu.py  widgets_slider_radio.py
Plot3D/: matplotlib_3d.py
PlotColormap/: colormap_white_min.m  colormap_white_min.py  print_matplotlib_colors.py
PlotContour/: contourImage2.m  contourOverImage.py  contour_demo.py
PlotExamples/: CartopyStereoGridLabels.py  R2014bAxesMultiColormap.m  airy_disc_kernel.m  bokeh_demo.py  matplotlib_add_font.py  polar_plot_matplotlib.py  subplots_demo.py  title_gitrev.py  xarray_matplotlib.py
PlotPcolor/: pcolor_real32.py  pcolormesh_NaN.py
PlotPolar/: polar_axes_with_image.py  polar_plot_matplotlib.py
archive/: .travis.yml
f2py/: Makefile  README.rst  f2py_demo.py  fortprod.f  fortprod.f90  prog_fortprod.f
pyplots/: __init__.py  data.py  polarplot.py
tests/: test.py  test_oct2py.py  test_plot.m
