[metadata]
name = python-matlab-examples
version = 0.5.0
description = Tricks and tips with Matlab and Python plotting
author = Michael Hirsch, Ph.D.
url = https://github.com/scivision/python-matlab-examples
keywords = 
  plot
  data science
classifiers =
  Development Status :: 4 - Beta
  Environment :: Console
  Intended Audience :: Developers
  Intended Audience :: Education
  Operating System :: OS Independent
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Topic :: Multimedia :: Graphics :: Presentation
  Topic :: Multimedia :: Video :: Display
  Topic :: Scientific/Engineering :: Visualization
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.6
setup_requires = 
  setuptools >= 38.6
  pip >= 10
  twine >= 1.11
include_package_data = True
packages = find:
install_requires =
  numpy
  scipy
  matplotlib >= 2.2
  oct2py == 3.9.0   # there is still a bug with Oct2Py 4 (July 2018)

[options.extras_require]
tests = 
  pytest
  pytest-cov
  coveralls
  flake8
  mypy
plots = 
  bokeh
  mpld3
io = 
  h5py
  astropy

[options.entry_points]
console_scripts =

[flake8]
max-line-length = 132
exclude = .git,.eggs/,__pycache__,doc/,docs/,build/,dist/,archive/

[coverage:run]
cover_pylib = false
omit =
  /home/travis/virtualenv/*
  */site-packages/*
  */bin/*

[coverage:report]
exclude_lines =
  pragma: no cover
  def __repr__
  RuntimeError
  NotImplementedError
  ImportError
  KeyError
  FileNotFoundError
  CalledProcessError
  logging.warning
  ValueError
  TypeError
