[metadata]
name = python-matlab-examples
version = 0.5.0
author = Michael Hirsch, Ph.D.
author_email = scivision@users.noreply.github.com
description = Tricks and tips with Matlab and Python plotting
url = https://github.com/scivision/python-matlab-examples
keywords =
  plot
  data science
classifiers =
  Development Status :: 4 - Beta
  Environment :: Console
  Intended Audience :: Developers
  Intended Audience :: Education
  Operating System :: OS Independent
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Topic :: Multimedia :: Graphics :: Presentation
  Topic :: Multimedia :: Video :: Display
  Topic :: Scientific/Engineering :: Visualization
license_files =
  LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.6
setup_requires =
  setuptools >= 38.6
  pip >= 10
packages = find:
install_requires =
  numpy
  scipy
  matplotlib >= 2.2
  oct2py

[options.extras_require]
tests =
  pytest
  pytest-cov
  coveralls
  flake8
  mypy
plots =
  bokeh
  mpld3
io =
  h5py
  astropy

[options.entry_points]
console_scripts =

